<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".RoverControlActivity" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/txtMotor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/motor1" />
            
            <ToggleButton
                android:id="@+id/tgMotor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/txtMotor1"
                android:textOff="@string/motor_offline"
                android:textOn="@string/motor_online" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/txtMotor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/motor2" />
            
            <ToggleButton
                android:id="@+id/tgMotor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/txtMotor2"
                android:textOff="@string/motor_offline"
                android:textOn="@string/motor_online" />
		</RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/txtMotor3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/motor3" />
            
            <ToggleButton
                android:id="@+id/tgMotor3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/txtMotor3"
                android:textOff="@string/motor_offline"
                android:textOn="@string/motor_online" />
		</RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/txtMotor4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/motor4" />
            
            <ToggleButton
                android:id="@+id/tgMotor4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/txtMotor4"
                android:textOff="@string/motor_offline"
                android:textOn="@string/motor_online" />
		</RelativeLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btnForward"
            android:layout_weight="1.5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/btnForward"
             />
        
        <Button
            android:id="@+id/btnBackward"
            android:layout_weight="2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/btnBackward"
             />
        
        <Button
            android:id="@+id/btnLeft"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/btnLeft"
             />
        
        <Button
            android:id="@+id/btnRight"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/btnRight"
             />
        
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center" >

		<SeekBar
		    android:id="@+id/seekBar1"
		    android:layout_width="262dp"
		    android:layout_height="wrap_content"
		    android:max="20000" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center" >

		<TextView
	        android:id="@+id/txtVoltageR"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	    </TextView>


			    <SeekBar
	        android:id="@+id/seekBarR"
	        android:layout_width="262dp"
	        android:layout_height="wrap_content"
	        android:max="100" />


	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center" >

		<TextView
	        android:id="@+id/txtVoltageL"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	    </TextView>


			    <SeekBar
	        android:id="@+id/seekBarL"
	        android:layout_width="262dp"
	        android:layout_height="wrap_content"
	        android:max="100" />


	</LinearLayout>

	<TextView
        android:id="@+id/androidGPS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

	<TextView
        android:id="@+id/skyHookGPS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <ToggleButton
        android:id="@+id/skyHookTogButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOn="Accuracy On"
        android:textOff="Accuracy Off"
        android:checked="true" />
    	    
        <ToggleButton
        android:id="@+id/turnNNon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOn="Neural Network On"
        android:textOff="Neural Network Off"
        android:checked="false" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
			    
     <Button
        android:id="@+id/saveExternalStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Text" />

    <Button
        android:id="@+id/getExternalStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Display Text" />
    
    <Button
        android:id="@+id/sendFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send to PC" />
    </LinearLayout>
 
 <TextView android:id="@+id/responseText"
     android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:padding="5dp"
  android:text=""
  android:textAppearance="?android:attr/textAppearanceMedium" />
 
 <TextView android:id="@+id/showFile"
     android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:padding="5dp"
  android:text=""
  android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
 <TextView android:layout_width="fill_parent"
  android:layout_height="wrap_content"></TextView>
  
 <!--<EditText android:id="@+id/myInputText"
     android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:ems="10" android:lines="5"
  android:minLines="3" android:gravity="top|left"
  android:inputType="textMultiLine">
 
  <requestFocus />
 </EditText>-->
</LinearLayout>